--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "foundation": "~5.5.1"
   }
 }
