--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.1.0",
-    "foundation": "~5.5.1"
+    "lodash": "~3.1.0"
   }
 }
